2010-01-14  David Grundberg  <davidg@cs.umu.se>

	* fntests.m (run_test_script): Check all *.cc files for tests.

2010-01-13  Rik <octave@nomad.inbox5.com>

	* build_bc_overload_tests.sh: Correct test syntax (= vs. ==)

2010-01-13  John W. Eaton  <jwe@octave.org>

	* Makefile.am (test_bc_overloads.m): Accept expected results
	file as argument.  Style fixes.

2010-01-13  Jaroslav Hajek  <highegg@gmail.com>

	* build_bc_overload_tests.sh: New shell script.
	* build_bc_overloads_expected.m: New source (not normally used).
	* bc_overloads_expected: New text file.
	* Makefile.am: Build test_bc_overloads.m.

2009-12-25  John W. Eaton  <jwe@octave.org>

	* fntests.m (hastests): Use regexp instead of findstr and only
	match tests that appear as the first thing on a line.

2009-12-19  Rik <octave@nomad.inbox5.com>

	* build_sparse_tests.sh: Use lognrnd instead of deprecated lognormal_rnd

2009-12-19  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Eliminate TOPDIR variable in favor of built-in automake
	variables of top_builddir and top_srcdir.

2009-12-17  Rik  <octdev@nomad.inbox5.com>

	* config/unix.exp: Remove obsolete file from repository

2009-12-17  Rik  <octdev@nomad.inbox5.com>

	* @Blork/module.mk, @Cork/module.mk, @Dork/module.mk,
	@Gork/module.mk, @Pork/module.mk, @Sneetch/module.mk,
	@Snork/module.mk, @Spork/module.mk, Makefile.am: Distribute private
	function directories necessary for OOP tests to work in tarballs

2009-12-03  John W. Eaton  <jwe@octave.org>

	* Makefile.am (CLEANFILES, DISTCLEANFILES): New variables.

2009-11-10  John W. Eaton  <jwe@octave.org>

	* @Blork/module.mk, @Cork/module.mk, @Dork/module.mk,
	@Gork/module.mk, @Pork/module.mk, @Sneetch/module.mk,
	@Snork/module.mk, @Spork/module.mk, Makefile.am: New files.
	* Makefile.in: Delete.

2009-10-19  Rik  <octdev@nomad.inbox5.com>

	* fntests.m: .cc files are now included in the list of files requiring
	tests only if they define a user function (DEFUN or DEFUN_DLD)
